// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`route > Leuchars-Edinburgh 1`] = `
[
  2580,
  [
    [
      "LEUCHRS",
      "CUPAR",
      "Bombardier Non Tilt DMU",
      300,
    ],
    [
      "CUPAR",
      "LADYBNK",
      "Bombardier Non Tilt DMU",
      270,
    ],
    [
      "LADYBNK",
      "THRNTNJ",
      "HST 2+4 100mph Scotrail",
      360,
    ],
    [
      "THRNTNJ",
      "THRNTSJ",
      "Bombardier Non Tilt DMU",
      30,
    ],
    [
      "THRNTSJ",
      "KCLD",
      "Bombardier Non Tilt DMU",
      240,
    ],
    [
      "KCLD",
      "BISLND",
      "Class 47 & 10 coaches (95 mph)",
      180,
    ],
    [
      "BISLND",
      "IVRKTHG",
      "Bombardier Non Tilt DMU",
      420,
    ],
    [
      "IVRKTHG",
      "DLMYJN",
      "HST 2+4 100mph Scotrail",
      270,
    ],
    [
      "DLMYJN",
      "HAYMRWJ",
      "HST 2+4 100mph Scotrail",
      270,
    ],
    [
      "HAYMRWJ",
      "HAYMRKT",
      "Class 158",
      60,
    ],
    [
      "HAYMRKT",
      "PRNCSTG",
      "Class 158",
      90,
    ],
    [
      "PRNCSTG",
      "EDINBUR",
      "Class 800 9 Car Diesel",
      90,
    ],
  ],
]
`;

exports[`route > Leuchars-Edinburgh with preferred loads 1`] = `
[
  3150,
  [
    [
      "LEUCHRS",
      "CUPAR",
      "Class 170",
      390,
    ],
    [
      "CUPAR",
      "LADYBNK",
      "Class 170",
      300,
    ],
    [
      "LADYBNK",
      "THRNTNJ",
      "Class 170",
      450,
    ],
    [
      "THRNTNJ",
      "THRNTSJ",
      "Class 170",
      30,
    ],
    [
      "THRNTSJ",
      "KCLD",
      "Class 170",
      240,
    ],
    [
      "KCLD",
      "BISLND",
      "Class 170",
      390,
    ],
    [
      "BISLND",
      "IVRKTHG",
      "Class 170",
      450,
    ],
    [
      "IVRKTHG",
      "DLMYJN",
      "Class 170",
      330,
    ],
    [
      "DLMYJN",
      "HAYMRWJ",
      "Class 170",
      300,
    ],
    [
      "HAYMRWJ",
      "HAYMRKT",
      "Class 170",
      60,
    ],
    [
      "HAYMRKT",
      "PRNCSTG",
      "Class 170",
      90,
    ],
    [
      "PRNCSTG",
      "EDINBUR",
      "Class 170",
      120,
    ],
  ],
]
`;

exports[`route > Leuchars-London 1`] = `
[
  14310,
  [
    [
      "LEUCHRS",
      "CUPAR",
      "Bombardier Non Tilt DMU",
      300,
    ],
    [
      "CUPAR",
      "LADYBNK",
      "Bombardier Non Tilt DMU",
      270,
    ],
    [
      "LADYBNK",
      "THRNTNJ",
      "HST 2+4 100mph Scotrail",
      360,
    ],
    [
      "THRNTNJ",
      "THRNTSJ",
      "Bombardier Non Tilt DMU",
      30,
    ],
    [
      "THRNTSJ",
      "KCLD",
      "Bombardier Non Tilt DMU",
      240,
    ],
    [
      "KCLD",
      "BISLND",
      "Class 47 & 10 coaches (95 mph)",
      180,
    ],
    [
      "BISLND",
      "IVRKTHG",
      "Bombardier Non Tilt DMU",
      420,
    ],
    [
      "IVRKTHG",
      "DLMYJN",
      "HST 2+4 100mph Scotrail",
      270,
    ],
    [
      "DLMYJN",
      "HAYMRWJ",
      "HST 2+4 100mph Scotrail",
      270,
    ],
    [
      "HAYMRWJ",
      "HAYMRKT",
      "Class 800 9 Car Electric",
      60,
    ],
    [
      "HAYMRKT",
      "CRSTRS",
      "Bus",
      600,
    ],
    [
      "CRSTRS",
      "CRSTRSS",
      "Class 150, 155 or 156",
      60,
    ],
    [
      "CRSTRSS",
      "ABINGTN",
      "Class 390 EMU - 9 vehicles 125 mph",
      480,
    ],
    [
      "ABINGTN",
      "BEATCKS",
      "Class 67 & 4 coaches (125 mph)",
      270,
    ],
    [
      "BEATCKS",
      "BEATCK",
      "Class 390 EMU - 9 vehicles 125 mph",
      300,
    ],
    [
      "BEATCK",
      "LCKRBIE",
      "Class 390 EMU - 9 vehicles 125 mph",
      420,
    ],
    [
      "LCKRBIE",
      "KRKP862",
      "Class 390 EMU - 9 vehicles 125 mph",
      390,
    ],
    [
      "KRKP862",
      "QNTNSHL",
      "Class 86/87/90 & 10 coaches (100 mph)",
      60,
    ],
    [
      "QNTNSHL",
      "GRETNAJ",
      "Bombardier Non Tilt DMU",
      30,
    ],
    [
      "GRETNAJ",
      "CARLILE",
      "Class 390 EMU - 9 vehicles 125 mph",
      360,
    ],
    [
      "CARLILE",
      "PNTH",
      "Class 90 Freight 500 tonnes at 50mph",
      150,
    ],
    [
      "PNTH",
      "SHAPSMT",
      "Class 325 Electric Parcels Unit",
      480,
    ],
    [
      "SHAPSMT",
      "TEBAY",
      "Class 325 Electric Parcels Unit",
      240,
    ],
    [
      "TEBAY",
      "GRIGG",
      "Class 325 Electric Parcels Unit",
      240,
    ],
    [
      "GRIGG",
      "OXENHLM",
      "Class 390 EMU - 9 vehicles 125 mph",
      270,
    ],
    [
      "OXENHLM",
      "CRNFNJN",
      "Class 390 EMU - 9 vehicles 125 mph",
      420,
    ],
    [
      "CRNFNJN",
      "MORCMSJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      120,
    ],
    [
      "MORCMSJ",
      "LANCSTR",
      "Class 90 & 7 coaches (110 mph)",
      60,
    ],
    [
      "LANCSTR",
      "GSTANG",
      "Class 390 EMU - 9 vehicles 125 mph",
      360,
    ],
    [
      "GSTANG",
      "PRSTNFJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      300,
    ],
    [
      "PRSTNFJ",
      "PRST",
      "Class 195 2 car",
      60,
    ],
    [
      "PRST",
      "MNCRIAP",
      "Bus",
      60,
    ],
    [
      "MNCRIAP",
      "HLDGWJ",
      "Class 195 2 car",
      90,
    ],
    [
      "HLDGWJ",
      "HLDGSJ",
      "Class 150, 155 or 156",
      60,
    ],
    [
      "HLDGSJ",
      "WLMSL",
      "Class 92 & 16 coaches at 80mph (inc. comfort speeds)",
      120,
    ],
    [
      "WLMSL",
      "ALDEDGE",
      "Class 150, 155 or 156",
      60,
    ],
    [
      "ALDEDGE",
      "SBCH",
      "Class 350 110mph",
      420,
    ],
    [
      "SBCH",
      "CREW154",
      "Class 390 EMU - 9 vehicles 125 mph",
      180,
    ],
    [
      "CREW154",
      "CREWE",
      "Class 150, 155 or 156",
      120,
    ],
    [
      "CREWE",
      "CREWBHJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      60,
    ],
    [
      "CREWBHJ",
      "MADELEY",
      "Class 390 EMU - 9 vehicles 125 mph",
      210,
    ],
    [
      "MADELEY",
      "NTNB",
      "Class 390 EMU - 9 vehicles 125 mph",
      300,
    ],
    [
      "NTNB",
      "STAFFRD",
      "Class 390 EMU - 9 vehicles 125 mph",
      180,
    ],
    [
      "STAFFRD",
      "COLWICH",
      "Bombardier Non Tilt DMU",
      270,
    ],
    [
      "COLWICH",
      "RUGLYNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      90,
    ],
    [
      "RUGLYNJ",
      "LCHTNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      240,
    ],
    [
      "LCHTNJ",
      "AMNGTNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      210,
    ],
    [
      "AMNGTNJ",
      "NNTN",
      "Class 390 EMU - 9 vehicles 125 mph",
      360,
    ],
    [
      "NNTN",
      "RUGBTVJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      390,
    ],
    [
      "RUGBTVJ",
      "RUGBY",
      "Class 390 EMU - 9 vehicles 125 mph",
      30,
    ],
    [
      "RUGBY",
      "HMTNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      30,
    ],
    [
      "HMTNJ",
      "WEEDON",
      "Class 90 Freight 1000 tonnes at 50mph",
      90,
    ],
    [
      "WEEDON",
      "HANSLPJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      390,
    ],
    [
      "HANSLPJ",
      "MKNSCEN",
      "Class 390 EMU - 9 vehicles 125 mph",
      180,
    ],
    [
      "MKNSCEN",
      "BLTCHLY",
      "Bombardier Tilt DMU",
      90,
    ],
    [
      "BLTCHLY",
      "LEDBRNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      270,
    ],
    [
      "LEDBRNJ",
      "TRING",
      "Class 390 EMU - 9 vehicles 125 mph",
      150,
    ],
    [
      "TRING",
      "BONENDJ",
      "Bombardier Tilt DMU",
      180,
    ],
    [
      "BONENDJ",
      "WATFDJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      240,
    ],
    [
      "WATFDJ",
      "HROW",
      "Class 66 Freight - 2200 tonnes at 60 mph",
      120,
    ],
    [
      "HROW",
      "WMBY",
      "Bombardier Tilt DMU",
      120,
    ],
    [
      "WMBY",
      "WLSDWLJ",
      "Bombardier Tilt DMU",
      90,
    ],
    [
      "WLSDWLJ",
      "CMDNJN",
      "Bombardier Tilt DMU",
      180,
    ],
    [
      "CMDNJN",
      "CMDNRDJ",
      "Class 150, 155 or 156",
      180,
    ],
    [
      "CMDNRDJ",
      "CMDNRCJ",
      "Class 92 & 16 coaches at 80mph (inc. comfort speeds)",
      60,
    ],
    [
      "CMDNRCJ",
      "YWAYNJN",
      "Class 47 & 13 coaches (75 mph)",
      90,
    ],
    [
      "YWAYNJN",
      "KNGXFTJ",
      "Class 66 Freight - 2200 tonnes at 60 mph",
      120,
    ],
    [
      "KNGXFTJ",
      "KNGXBEL",
      "Class 180",
      90,
    ],
    [
      "KNGXBEL",
      "KNGX",
      "Class 180",
      120,
    ],
  ],
]
`;

exports[`route > Leuchars-London with banned loads 1`] = `
[
  14310,
  [
    [
      "LEUCHRS",
      "CUPAR",
      "Bombardier Non Tilt DMU",
      300,
    ],
    [
      "CUPAR",
      "LADYBNK",
      "Bombardier Non Tilt DMU",
      270,
    ],
    [
      "LADYBNK",
      "THRNTNJ",
      "HST 2+4 100mph Scotrail",
      360,
    ],
    [
      "THRNTNJ",
      "THRNTSJ",
      "Bombardier Non Tilt DMU",
      30,
    ],
    [
      "THRNTSJ",
      "KCLD",
      "Bombardier Non Tilt DMU",
      240,
    ],
    [
      "KCLD",
      "BISLND",
      "Class 47 & 10 coaches (95 mph)",
      180,
    ],
    [
      "BISLND",
      "IVRKTHG",
      "Bombardier Non Tilt DMU",
      420,
    ],
    [
      "IVRKTHG",
      "DLMYJN",
      "HST 2+4 100mph Scotrail",
      270,
    ],
    [
      "DLMYJN",
      "HAYMRWJ",
      "HST 2+4 100mph Scotrail",
      270,
    ],
    [
      "HAYMRWJ",
      "HAYMRKT",
      "Class 800 9 Car Electric",
      60,
    ],
    [
      "HAYMRKT",
      "CRSTRS",
      "Bus",
      600,
    ],
    [
      "CRSTRS",
      "CRSTRSS",
      "Class 150, 155 or 156",
      60,
    ],
    [
      "CRSTRSS",
      "ABINGTN",
      "Class 390 EMU - 9 vehicles 125 mph",
      480,
    ],
    [
      "ABINGTN",
      "BEATCKS",
      "Class 67 & 4 coaches (125 mph)",
      270,
    ],
    [
      "BEATCKS",
      "BEATCK",
      "Class 390 EMU - 9 vehicles 125 mph",
      300,
    ],
    [
      "BEATCK",
      "LCKRBIE",
      "Class 390 EMU - 9 vehicles 125 mph",
      420,
    ],
    [
      "LCKRBIE",
      "KRKP862",
      "Class 390 EMU - 9 vehicles 125 mph",
      390,
    ],
    [
      "KRKP862",
      "QNTNSHL",
      "Class 86/87/90 & 10 coaches (100 mph)",
      60,
    ],
    [
      "QNTNSHL",
      "GRETNAJ",
      "Bombardier Non Tilt DMU",
      30,
    ],
    [
      "GRETNAJ",
      "CARLILE",
      "Class 390 EMU - 9 vehicles 125 mph",
      360,
    ],
    [
      "CARLILE",
      "PNTH",
      "Class 90 Freight 500 tonnes at 50mph",
      150,
    ],
    [
      "PNTH",
      "SHAPSMT",
      "Class 325 Electric Parcels Unit",
      480,
    ],
    [
      "SHAPSMT",
      "TEBAY",
      "Class 325 Electric Parcels Unit",
      240,
    ],
    [
      "TEBAY",
      "GRIGG",
      "Class 325 Electric Parcels Unit",
      240,
    ],
    [
      "GRIGG",
      "OXENHLM",
      "Class 390 EMU - 9 vehicles 125 mph",
      270,
    ],
    [
      "OXENHLM",
      "CRNFNJN",
      "Class 390 EMU - 9 vehicles 125 mph",
      420,
    ],
    [
      "CRNFNJN",
      "MORCMSJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      120,
    ],
    [
      "MORCMSJ",
      "LANCSTR",
      "Class 90 & 7 coaches (110 mph)",
      60,
    ],
    [
      "LANCSTR",
      "GSTANG",
      "Class 390 EMU - 9 vehicles 125 mph",
      360,
    ],
    [
      "GSTANG",
      "PRSTNFJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      300,
    ],
    [
      "PRSTNFJ",
      "PRST",
      "Class 195 2 car",
      60,
    ],
    [
      "PRST",
      "MNCRIAP",
      "Bus",
      60,
    ],
    [
      "MNCRIAP",
      "HLDGWJ",
      "Class 195 2 car",
      90,
    ],
    [
      "HLDGWJ",
      "HLDGSJ",
      "Class 150, 155 or 156",
      60,
    ],
    [
      "HLDGSJ",
      "WLMSL",
      "Class 92 & 16 coaches at 80mph (inc. comfort speeds)",
      120,
    ],
    [
      "WLMSL",
      "ALDEDGE",
      "Class 150, 155 or 156",
      60,
    ],
    [
      "ALDEDGE",
      "SBCH",
      "Class 350 110mph",
      420,
    ],
    [
      "SBCH",
      "CREW154",
      "Class 390 EMU - 9 vehicles 125 mph",
      180,
    ],
    [
      "CREW154",
      "CREWE",
      "Class 150, 155 or 156",
      120,
    ],
    [
      "CREWE",
      "CREWBHJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      60,
    ],
    [
      "CREWBHJ",
      "MADELEY",
      "Class 390 EMU - 9 vehicles 125 mph",
      210,
    ],
    [
      "MADELEY",
      "NTNB",
      "Class 390 EMU - 9 vehicles 125 mph",
      300,
    ],
    [
      "NTNB",
      "STAFFRD",
      "Class 390 EMU - 9 vehicles 125 mph",
      180,
    ],
    [
      "STAFFRD",
      "COLWICH",
      "Bombardier Non Tilt DMU",
      270,
    ],
    [
      "COLWICH",
      "RUGLYNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      90,
    ],
    [
      "RUGLYNJ",
      "LCHTNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      240,
    ],
    [
      "LCHTNJ",
      "AMNGTNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      210,
    ],
    [
      "AMNGTNJ",
      "NNTN",
      "Class 390 EMU - 9 vehicles 125 mph",
      360,
    ],
    [
      "NNTN",
      "RUGBTVJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      390,
    ],
    [
      "RUGBTVJ",
      "RUGBY",
      "Class 390 EMU - 9 vehicles 125 mph",
      30,
    ],
    [
      "RUGBY",
      "HMTNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      30,
    ],
    [
      "HMTNJ",
      "WEEDON",
      "Class 90 Freight 1000 tonnes at 50mph",
      90,
    ],
    [
      "WEEDON",
      "HANSLPJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      390,
    ],
    [
      "HANSLPJ",
      "MKNSCEN",
      "Class 390 EMU - 9 vehicles 125 mph",
      180,
    ],
    [
      "MKNSCEN",
      "BLTCHLY",
      "Bombardier Tilt DMU",
      90,
    ],
    [
      "BLTCHLY",
      "LEDBRNJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      270,
    ],
    [
      "LEDBRNJ",
      "TRING",
      "Class 390 EMU - 9 vehicles 125 mph",
      150,
    ],
    [
      "TRING",
      "BONENDJ",
      "Bombardier Tilt DMU",
      180,
    ],
    [
      "BONENDJ",
      "WATFDJ",
      "Class 390 EMU - 9 vehicles 125 mph",
      240,
    ],
    [
      "WATFDJ",
      "HROW",
      "Class 66 Freight - 2200 tonnes at 60 mph",
      120,
    ],
    [
      "HROW",
      "WMBY",
      "Bombardier Tilt DMU",
      120,
    ],
    [
      "WMBY",
      "WLSDWLJ",
      "Bombardier Tilt DMU",
      90,
    ],
    [
      "WLSDWLJ",
      "CMDNJN",
      "Bombardier Tilt DMU",
      180,
    ],
    [
      "CMDNJN",
      "CMDNRDJ",
      "Class 150, 155 or 156",
      180,
    ],
    [
      "CMDNRDJ",
      "CMDNRCJ",
      "Class 92 & 16 coaches at 80mph (inc. comfort speeds)",
      60,
    ],
    [
      "CMDNRCJ",
      "YWAYNJN",
      "Class 47 & 13 coaches (75 mph)",
      90,
    ],
    [
      "YWAYNJN",
      "KNGXFTJ",
      "Class 66 Freight - 2200 tonnes at 60 mph",
      120,
    ],
    [
      "KNGXFTJ",
      "KNGXBEL",
      "Class 180",
      90,
    ],
    [
      "KNGXBEL",
      "KNGX",
      "Class 180",
      120,
    ],
  ],
]
`;
